# before_Github

./: .gitignore  README.md
8x8_LED_Game/ArduinoReceiver/: receiver_arduino.ino
8x8_LED_Game/MatrixGameLed/: .classpath  final2.java
8x8_LED_Game/MatrixGameLed/src/: GameJpanel.java  Main.java  final2.java
Contact_Management/: Telephone_Diary.BAS
LUDO/src/: board.java  dice.java  dice1.java  dice3.java  dicemain.java  dicepra.java  rand.java
LoadShedding/: Loadshedding.rmskin
LoadShedding/loadshedding/: Copy.lnk  inst.vbs  loads(pailako).cpp  loadshedding.bas  rain.ini  raini.ini  remain.txt  routine.txt  runinbg.vbs
RC-car/RcRemote/: settings.gradle
RC-car/RcRemote/app/: build.gradle
RC-car/RcRemote/app/src/main/: AndroidManifest.xml
RC-car/RcRemote/gradle/wrapper/: gradle-wrapper.properties
RC-car/arduino/: car_bluetooth.ino
Snake/android/app/: build.gradle  proguard-rules.pro
Snake/android/app/src/main/: AndroidManifest.xml
Snake/java/: Buttons.java  MyFirstGraphics.java  SnakePract.java  Snakeclasskk.java  dice.java  edit.java  frame.java  main.java
Solar Rocket Rider/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  Camera.cpp  Camera.h  Display.cpp  Display.h  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ObjectHandler.h  Physics.h  PhysicsModel.h  Planet.h  Shader.cpp  Shader.h  Spaceship.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Timer.h  UniformLocation.h  main.cpp  temp_file
Solar Rocket Rider/primitives/: ShapeData.h  ShapeGenerator.cpp  ShapeGenerator.h  TeapotData.h  Vertex.h
(+27 files in other folders)
